--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2869,6 +2869,11 @@ Courses--------------
 #footer .footer-top .footer-links ul .activefooter {
   color:#4be8b0;
 }
+
+.privacypolicyhover:hover {
+  color: #4be8b0;
+  text-decoration: none !important; 
+}
 #footer .footer-top .footer-newsletter form {
   margin-top: 30px;
   background: #fff;
