--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,20 +17,20 @@ body, html {
 
 
 html {
-  --thumbBG: #3366cc;
+  --thumbBG: #16dd97;
 }
 body::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 body::-webkit-scrollbar-track {
-  background: rgba(116, 112, 112, 0.548);
+  background: rgba(0, 0, 0, 0);
 }
  
  
 body::-webkit-scrollbar-thumb {
   background-color: var(--thumbBG) ;
-  border-radius: 5px;
+  border-radius: 3px;
   border: 3px solid var(--scrollbarBG);
 }
  
