update pythonintro course page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@ html {
 body::-webkit-scrollbar {
   width: 8px;
 }
-
 body::-webkit-scrollbar-track {
   background: rgba(0, 0, 0, 0);
 }
@@ -678,7 +677,9 @@ body, html {
 .breakdown {
   display:none;
 }
-
+.breakdown li {
+  color:#666666;
+}
 .coursehelp {
   border-radius: 50px;
   border-style: solid;
@@ -722,7 +723,7 @@ body, html {
 }
 
 @media screen and (max-width: 990px) {
-  .table1 {
+  .limiter1 {
     display: none;
   }
   .breakdown {
@@ -784,7 +785,7 @@ body, html {
   line-height: 1.2;
   font-weight: 500 !important;
   text-align:center;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #f2f2f2;
 }
@@ -822,6 +823,28 @@ body, html {
 }
 .row1 .cell:nth-child(7) {
   width: 16%;
+}
+/*hasMultipleClasses will overide these widths for cells since it only has 6 columns vs 7*/
+.hasMultipleClasses .cell:nth-child(1) {
+  width: 12%;
+}
+
+.hasMultipleClasses .cell:nth-child(2) {
+  width: 17%;
+}
+
+.hasMultipleClasses .cell:nth-child(3) {
+  width: 17%;
+}
+
+.hasMultipleClasses .cell:nth-child(4) {
+  width: 17%;
+}
+.hasMultipleClasses .cell:nth-child(5) {
+  width: 17%;
+}
+.hasMultipleClasses .cell:nth-child(6) {
+  width: 20%;
 }
 
 .table1, .row1 {
@@ -2685,7 +2708,7 @@ Courses--------------
 .coursebutton {
   color: white; 
   border: 2px solid#18d26e;
-  border-radius: 8px;
+  border-radius: 15px;
   background-color:#18d26e;
   padding-top: 7px;
   padding-bottom: 7px;
@@ -2695,6 +2718,11 @@ Courses--------------
 }
 .coursebutton:hover {
   background-color: white;
+  color: #18d26e;
+}
+/*for course pages where <button> is parent element for <a>*/
+.coursebutton a:hover {
+  text-decoration: none;
   color: #18d26e;
 }
 /*how it works button on courses.html and on joinus.html*/
