update java course page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,9 +676,10 @@ body, html {
 }
 .breakdown {
   display:none;
+  margin-bottom:40px;
 }
 .breakdown li {
-  color:#666666;
+  color:black;
 }
 .coursehelp {
   border-radius: 50px;
