--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,7 +676,7 @@ body, html {
 }
 .breakdown {
   display:none;
-  margin-bottom:40px;
+  margin-bottom:0px;
 }
 .breakdown li {
   color:black;
@@ -788,7 +788,7 @@ body, html {
   text-align:center;
   padding-top: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid #ddd;
 }
 
 .row1.header .cell {
