--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2470,11 +2470,11 @@ Courses--------------
   color: #fff;
 }
 
-.img-fluid-company {
+/*.img-fluid-company {
   width: 475px;
   height: 224px;
   margin: 0 40px 0 0;
-}
+}*/
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
