--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2282,14 +2282,13 @@ Courses--------------
   font-size: 16px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 10px 30px;
+  padding: 5px 30px;
   transition: 0.5s;
   color: black;
-  background: rgba(255, 255, 255, 0.98);
+  /*background: rgba(255, 255, 255, 0.98);*/
   border-width: 0px;
   text-align:center;
   width:100%;
-  margin-bottom: -2%;
 }
 .profilebutton:hover {
   color:#16dd97;
@@ -2300,11 +2299,16 @@ Courses--------------
   margin-top:10px;/*margins are from the padding of myBtnContianer*/
   margin-left:-30px;
   cursor:pointer;
+  background:rgba(255,255,255,0.98);
+  box-shadow:4px 4px 10px black;
+  z-index:10;
+  max-height:400px;
+  overflow-y:scroll;
 }
 #myBtnContainerteam:hover .dropdownfilter, #myBtnContainercourses:hover .dropdownfilter {
   display:block;
 }
-#myBtnContainerteam:hover, .#myBtnContainercourses:hover {
+#myBtnContainerteam:hover, #myBtnContainercourses:hover {
   background: #06f09e;
   text-decoration:none;
 }
